# 46755_2_ass

./: .gitignore  1_1_forecast_vs_full_capacity  Code_Explanation_Scenario_Generator  Questions.md  README.md  caption_generator.py  pyproject.toml  setup.py  two_price_model.lp  wind_actual_gen.csv  wind_forecast.csv
data/: Price_dayahead.xlsx  bids_sorted_data.csv
part1/results/scenarios/: in_sample_scenarios.pkl  out_of_sample_scenarios.pkl
part1/results/step3/: fold_evolution.txt
part1/scripts/: main_step1.py  main_step2.py  main_step3.py  main_step4.py
part1/scripts/data_and_scenario_generation/: import_data.py  load_scenarios.py  plot_functions_scenario_generation.py  scenario_generator.py
part1/scripts/outdated_scripts/: scenario_generation.py  (+2 more)
part2/: generate_consumption_profiles.py  main_part2.py  part2.py  step1.py  step2.py  step3.py
part2/generation/: ConsumptionProfile.py
part2/plot_functions/: plot_functions.py
part2/utils/: step1_utils.py  step2_utils.py  step3_utils.py
results/scenarios/: in_sample_scenarios.pkl  out_of_sample_scenarios.pkl
scripts/: data_import.py  functions.py  generate_conditions.py  import_data.py  in_sample_scenarios.csv  main.py  plot_functions.py  scenario_generation.py  scenario_generation_functions.py  scenario_generator.py  scenario_generator_loop.py
scripts/data_and_scenario_generation/: import_data.py  part2.py  part2_generation  plot_functions_scenario_generation.py  scenario_generator.py
scripts/steps/: step1_one_price.py  step2_two_price.py  step3_expost_analysis.py  step4_Risk_Averse.py
(+9 files in other folders)
